// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseForm correctly with data 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="flex space-x-2 items-baseline"
  >
    <input
      className="form-control block  px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
      defaultValue="cake"
      name="description"
      placeholder="description"
      required={true}
      type="text"
    />
    <input
      className="form-control  block px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
      defaultValue={15}
      name="amount"
      placeholder="amount"
      required={true}
      step={0.01}
      type="number"
    />
    <textarea
      className="form-control align-center items-center block px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
      defaultValue=""
      name="note"
      placeholder="Note"
      rows={1}
    />
    <input
      className="form-control align-center items-center block px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
      defaultValue="1970-01-01"
      name="date"
      type="date"
    />
    <button
      className="inline-block px-6 py-2.5 mb-6 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
      type="submit"
    >
      Edit Expense
    </button>
  </div>
</form>
`;

exports[`should render ExpenseForm correctly with no data 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="flex space-x-2 items-baseline"
  >
    <input
      className="form-control block  px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
      defaultValue=""
      name="description"
      placeholder="description"
      required={true}
      type="text"
    />
    <input
      className="form-control  block px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
      defaultValue=""
      name="amount"
      placeholder="amount"
      required={true}
      step={0.01}
      type="number"
    />
    <textarea
      className="form-control align-center items-center block px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
      defaultValue=""
      name="note"
      placeholder="Note"
      rows={1}
    />
    <input
      className="form-control align-center items-center block px-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
      defaultValue=""
      name="date"
      type="date"
    />
    <button
      className="inline-block px-6 py-2.5 mb-6 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
      type="submit"
    >
      Add expense
    </button>
  </div>
</form>
`;
